Fixed search to query the master branch, not draft. Fixed invisible "No results" message. Trigger search also on using Backspace and Delete (#158)

--- a/src/main/resources/assets/css/global/_live-search.scss
+++ b/src/main/resources/assets/css/global/_live-search.scss
@@ -73,6 +73,7 @@
 
   &__no-results {
     display: none;
+    color: $color_black;
     border-color: $color-silver;
     border-style: solid;
     border-width: 0 1px 1px 1px;
